Initial Commit, My First Personal Project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">N.Y.T- Note Your Thoughts</string>
+    <string name="welcome_to_a_new_dispensation">Welcome to a new Dispensation!</string>
 </resources>
